feat: add Application Insights telemetry support and configuration

--- a/templates/Sekiban.Pure.Templates/content/Sekiban.Orleans.Aspire/OrleansSekiban.ApiService/appsettings.json
+++ b/templates/Sekiban.Pure.Templates/content/Sekiban.Orleans.Aspire/OrleansSekiban.ApiService/appsettings.json
@@ -12,5 +12,15 @@
       "Orleans.Streaming": "Warning"
     }
   },
+  "ApplicationInsights": {
+    "EnableAdaptiveSampling": true,
+    "InitialSamplingPercentage": 20.0,
+    "MinSamplingPercentage": 1.0,
+    "SamplingSettings": {
+      "IsEnabled": true,
+      "MaxTelemetryItemsPerSecond": 0.2,
+      "ExcludedTypes": "Trace;Event"
+    }
+  },
   "AllowedHosts": "*"
 }
