--- a/templates/Sekiban.Pure.Templates/content/Sekiban.Orleans.Aspire/OrleansSekiban.ApiService/OrleansSekiban.ApiService.csproj
+++ b/templates/Sekiban.Pure.Templates/content/Sekiban.Orleans.Aspire/OrleansSekiban.ApiService/OrleansSekiban.ApiService.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Aspire.Azure.Data.Tables" Version="9.2.1" />
     <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.2.1" />
     <PackageReference Include="Aspire.Azure.Storage.Queues" Version="9.2.1" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.23.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
     <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="9.1.2" />
     <PackageReference Include="Microsoft.Orleans.Clustering.Cosmos" Version="9.1.2" />
