--- a/tools/SekibanDocumentMcpSse/SekibanDocumentMcpSse.csproj
+++ b/tools/SekibanDocumentMcpSse/SekibanDocumentMcpSse.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="../../../docs/llm/*.md">
+    <Content Include="../../docs/llm/*.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
