Refactor base path configuration in appsettings and SekibanDocumentService to use AppDomain.CurrentDomain.BaseDirectory

--- a/tools/SekibanDocumentMcpSse/appsettings.json
+++ b/tools/SekibanDocumentMcpSse/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "Documentation": {
-    "BasePath": "../../../docs/llm",
+    "BasePath": "",
     "EnableFileWatcher": true
   },
   "AzureOpenAI": {
