--- a/tools/SekibanDocumentMcpSse/appsettings.json
+++ b/tools/SekibanDocumentMcpSse/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "Documentation": {
     "BasePath": "",
-    "EnableFileWatcher": true
+    "EnableFileWatcher": false
   },
   "AzureOpenAI": {
     "Endpoint": "",
