--- a/internalUsages/DaprSample/DaprSample.AppHost/DaprSample.AppHost.csproj
+++ b/internalUsages/DaprSample/DaprSample.AppHost/DaprSample.AppHost.csproj
@@ -1,5 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
+  <Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0" />
+  
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
@@ -9,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0" />
     <PackageReference Include="Aspire.Hosting" Version="9.0.0" />
     <PackageReference Include="Aspire.Hosting.Dapr" Version="9.0.0" />
     <PackageReference Include="Aspire.Hosting.Redis" Version="9.0.0" />
@@ -16,7 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DaprSample.Api\DaprSample.Api.csproj" />
-    <ProjectReference Include="..\DaprSample.ServiceDefaults\DaprSample.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\DaprSample.ServiceDefaults\DaprSample.ServiceDefaults.csproj" IsAspireProjectResource="false" />
   </ItemGroup>
 
 </Project>
