--- a/src/Sekiban.Pure.Dapr/Sekiban.Pure.Dapr.csproj
+++ b/src/Sekiban.Pure.Dapr/Sekiban.Pure.Dapr.csproj
@@ -22,6 +22,11 @@
     <PackageReference Include="Dapr.AspNetCore" Version="1.14.0" />
     <PackageReference Include="Dapr.Actors" Version="1.14.0" />
     <PackageReference Include="Dapr.Actors.AspNetCore" Version="1.14.0" />
+    <PackageReference Include="Google.Protobuf" Version="3.25.1" />
+    <PackageReference Include="Grpc.Tools" Version="2.60.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -31,6 +36,10 @@
   <ItemGroup>
     <None Include="..\..\README.md" Pack="true" PackagePath="\" />
     <!-- <None Include="..\..\icon.png" Pack="true" PackagePath="\" /> -->
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="Protos\**\*.proto" GrpcServices="None" />
   </ItemGroup>
 
 </Project>
