--- a/internalUsages/DaprSample/DaprSample.Domain/DaprSample.Domain.csproj
+++ b/internalUsages/DaprSample/DaprSample.Domain/DaprSample.Domain.csproj
@@ -12,4 +12,16 @@
     <ProjectReference Include="..\..\..\src\Sekiban.Pure.SourceGenerator\Sekiban.Pure.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.25.1" />
+    <PackageReference Include="Grpc.Tools" Version="2.60.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="Protos\**\*.proto" GrpcServices="None" />
+  </ItemGroup>
+
 </Project>
