--- a/internalUsages/DaprSample/components/pubsub.yaml
+++ b/internalUsages/DaprSample/components/pubsub.yaml
@@ -3,6 +3,10 @@ kind: Component
 metadata:
   name: sekiban-pubsub
 spec:
-  type: pubsub.in-memory
+  type: pubsub.redis
   version: v1
-  metadata: []
+  metadata:
+  - name: redisHost
+    value: redis:6379
+  - name: redisPassword
+    value: ""
