feat: Add debug endpoint for environment variable inspection and generate Dapr component files dynamically

--- a/internalUsages/DaprSample/components/statestore.yaml
+++ b/internalUsages/DaprSample/components/statestore.yaml
@@ -7,7 +7,7 @@ spec:
   version: v1
   metadata:
   - name: redisHost
-    value: redis:6379
+    value: "localhost:6379"
   - name: redisPassword
     value: ""
   - name: actorStateStore
