--- a/internalUsages/DaprSample/components/pubsub.yaml
+++ b/internalUsages/DaprSample/components/pubsub.yaml
@@ -7,6 +7,6 @@ spec:
   version: v1
   metadata:
   - name: redisHost
-    value: redis:6379
+    value: "localhost:6379"
   - name: redisPassword
     value: ""
