--- a/internalUsages/DaprSample/dapr-components/statestore.yaml
+++ b/internalUsages/DaprSample/dapr-components/statestore.yaml
@@ -6,8 +6,8 @@ spec:
   type: state.redis
   version: v1
   metadata:
-  - name: redisHost
-    value: localhost:6379
+  - name: connectionString
+    value: "$REDIS_CONNECTION_STRING"
   - name: redisPassword
     value: ""
   - name: actorStateStore
