--- a/internalUsages/DaprSample/dapr-components/pubsub.yaml
+++ b/internalUsages/DaprSample/dapr-components/pubsub.yaml
@@ -3,10 +3,5 @@ kind: Component
 metadata:
   name: sekiban-pubsub
 spec:
-  type: pubsub.redis
+  type: pubsub.in-memory
   version: v1
-  metadata:
-  - name: redisHost
-    value: localhost:6379
-  - name: redisPassword
-    value: ""
