--- a/internalUsages/DaprSample/dapr-components/statestore.yaml
+++ b/internalUsages/DaprSample/dapr-components/statestore.yaml
@@ -3,12 +3,8 @@ kind: Component
 metadata:
   name: sekiban-statestore
 spec:
-  type: state.redis
+  type: state.in-memory
   version: v1
   metadata:
-  - name: redisHost
-    value: localhost:6379
-  - name: redisPassword
-    value: ""
   - name: actorStateStore
     value: "true"
