--- a/internalUsages/DaprSample/dapr-components/statestore.yaml
+++ b/internalUsages/DaprSample/dapr-components/statestore.yaml
@@ -1,7 +1,7 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: sekiban-statestore
+  name: sekiban-eventstore
 spec:
   type: state.in-memory
   version: v1
