--- a/internalUsages/DaprSample/DaprSample.Api/DaprSample.Api.csproj
+++ b/internalUsages/DaprSample/DaprSample.Api/DaprSample.Api.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\src\Sekiban.Pure.CosmosDb\Sekiban.Pure.CosmosDb.csproj" />
+    <ProjectReference Include="..\..\..\src\Sekiban.Pure.Postgres\Sekiban.Pure.Postgres.csproj" />
     <ProjectReference Include="..\DaprSample.ServiceDefaults\DaprSample.ServiceDefaults.csproj" />
     <ProjectReference Include="..\DaprSample.Domain\DaprSample.Domain.csproj" />
     <ProjectReference Include="..\..\..\src\Sekiban.Pure.Dapr\Sekiban.Pure.Dapr.csproj" />
@@ -15,7 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.6" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.1" />
+    <PackageReference Include="Scalar.AspNetCore" Version="2.5.3" />
   </ItemGroup>
 
 </Project>
