feat: Improve modal handling and UX in App.razor, update Weather.razor for better forecast loading, adjust subscription.yaml for event routing, and optimize polling intervals in SekibanDaprExecutor

--- a/internalUsages/DaprSample/dapr-components/subscription.yaml
+++ b/internalUsages/DaprSample/dapr-components/subscription.yaml
@@ -3,9 +3,9 @@ kind: Subscription
 metadata:
   name: domain-events-subscription
 spec:
-  topic: domain-events
+  topic: events.all
   routes:
-    default: /events
+    default: /pubsub/events
   pubsubname: sekiban-pubsub
 scopes:
-- sekiban-api
+- dapr-sample-api
