Refactor DaprSample and OrleansSekiban.ApiService to use SharedDomain
- Updated namespaces in DaprSample.Api and OrleansSekiban.ApiService to reference SharedDomain.
- Changed domain types generation to use SharedDomain types.
- Implemented new command and query structures in SharedDomain for User and WeatherForecast aggregates.
- Added event handling and projection logic for User and WeatherForecast aggregates.
- Introduced Protobuf definitions for account operations and integrated them into SharedDomain.
- Created custom JSON converter for PartitionKeys to support serialization.
- Enhanced validation and error handling in command handlers.

--- a/internalUsages/DaprSample/DaprSample.Api/DaprSample.Api.csproj
+++ b/internalUsages/DaprSample/DaprSample.Api/DaprSample.Api.csproj
@@ -11,7 +11,7 @@
     <ProjectReference Include="..\..\..\src\Sekiban.Pure.CosmosDb\Sekiban.Pure.CosmosDb.csproj" />
     <ProjectReference Include="..\..\..\src\Sekiban.Pure.Postgres\Sekiban.Pure.Postgres.csproj" />
     <ProjectReference Include="..\DaprSample.ServiceDefaults\DaprSample.ServiceDefaults.csproj" />
-    <ProjectReference Include="..\DaprSample.Domain\DaprSample.Domain.csproj" />
+    <ProjectReference Include="..\..\SharedDomain\SharedDomain.csproj" />
     <ProjectReference Include="..\..\..\src\Sekiban.Pure.Dapr\Sekiban.Pure.Dapr.csproj" />
   </ItemGroup>
 
