--- a/internalUsages/OrleansSekiban.Web/OrleansSekiban.Web.csproj
+++ b/internalUsages/OrleansSekiban.Web/OrleansSekiban.Web.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OrleansSekiban.Domain\OrleansSekiban.Domain.csproj" />
+    <ProjectReference Include="..\SharedDomain\SharedDomain.csproj" />
     <ProjectReference Include="..\OrleansSekiban.ServiceDefaults\OrleansSekiban.ServiceDefaults.csproj" />
   </ItemGroup>
 
