refactor: Update Weather component and API client to use SharedDomain for weather-related functionality

--- a/internalUsages/DaprSample/DaprSample.Web/DaprSample.Web.csproj
+++ b/internalUsages/DaprSample/DaprSample.Web/DaprSample.Web.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DaprSample.ServiceDefaults\DaprSample.ServiceDefaults.csproj" />
-    <ProjectReference Include="..\DaprSample.Domain\DaprSample.Domain.csproj" />
+    <ProjectReference Include="..\..\SharedDomain\SharedDomain.csproj" />
   </ItemGroup>
 
 
