--- a/.gitignore
+++ b/.gitignore
@@ -199,6 +199,9 @@ PublishScripts/
 **/[Pp]ackages/*
 # except build/, which is used as an MSBuild target.
 !**/[Pp]ackages/build/
+# Don't ignore TypeScript packages
+!ts/src/packages/
+!ts/src/packages/**
 # Uncomment if necessary however generally it will be regenerated when needed
 #!**/[Pp]ackages/repositories.config
 # NuGet v3's project.json files produces more ignorable files
