--- a/ts/src/packages/core/package.json
+++ b/ts/src/packages/core/package.json
@@ -13,7 +13,7 @@
     }
   },
   "scripts": {
-    "build": "tsup",
+    "build": "tsup && tsc --emitDeclarationOnly",
     "dev": "tsup --watch",
     "test": "vitest",
     "test:watch": "vitest --watch",
@@ -32,7 +32,8 @@
   "license": "MIT",
   "dependencies": {
     "neverthrow": "^6.1.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.25.71"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
