--- a/templates/Sekiban.Pure.Templates/content/Sekiban.Dapr.Aspire/infrastructure/azure_container_apps/6.dapr-components/statestore.yaml
+++ b/templates/Sekiban.Pure.Templates/content/Sekiban.Dapr.Aspire/infrastructure/azure_container_apps/6.dapr-components/statestore.yaml
@@ -18,5 +18,7 @@ spec:
     value: "10"
   - name: concurrency
     value: first-write
+  - name: actorStateStore
+    value: "true"
   scopes:
   - daprsekiban-apiservice
