--- a/ts/src/packages/core/package.json
+++ b/ts/src/packages/core/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@types/node": "^20.11.0",
     "@types/uuid": "^9.0.7",
+    "@sekiban/testing": "file:../testing",
     "@vitest/coverage-v8": "^1.2.0",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
