feat: Implement weather forecast routes and server setup
- Added weather forecast routes for input, update location, delete, and retrieval of forecasts.
- Implemented error handling and validation for incoming requests.
- Created a server entry point with environment configuration and graceful shutdown handling.
- Integrated Dapr executor for command execution and query handling.
- Developed acceptance tests for user state machine transitions and validations.
- Established interfaces and executor logic for Dapr integration with Sekiban.

--- a/ts/samples/dapr-sample/package.json
+++ b/ts/samples/dapr-sample/package.json
@@ -3,26 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "description": "Comprehensive TypeScript Dapr sample application demonstrating Sekiban event sourcing",
+  "description": "Weather Forecast Dapr sample demonstrating Sekiban multi-payload projectors with TypeScript",
+  "main": "dist/server.js",
   "scripts": {
-    "build": "pnpm -r build",
-    "test": "pnpm -r test",
-    "test:acceptance": "vitest run tests/acceptance",
+    "build": "tsc",
+    "dev": "tsx watch src/server.ts",
+    "start": "node dist/server.js",
+    "test": "vitest run",
     "test:watch": "vitest",
-    "dev": "docker-compose up -d postgres && pnpm -r dev",
-    "dev:api": "pnpm --filter sekiban-dapr-api dev",
-    "dev:web": "pnpm --filter sekiban-dapr-web dev",
-    "clean": "pnpm -r clean",
-    "docker:up": "docker-compose up -d",
-    "docker:down": "docker-compose down",
-    "dapr:start": "dapr run --app-id sekiban-dapr-api --app-port 3000 --dapr-http-port 3500 -- pnpm dev:api",
+    "clean": "rm -rf dist",
+    "dapr:run": "dapr run --app-id weather-forecast-api --app-port 5000 --dapr-http-port 3500 --components-path ./dapr-components -- pnpm dev",
+    "dapr:stop": "dapr stop weather-forecast-api",
     "format": "prettier --write .",
-    "lint": "eslint . --ext .ts,.tsx --fix"
+    "lint": "eslint . --ext .ts --fix",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
     "@types/node": "^20.0.0",
-    "@types/pg": "^8.10.0",
     "@types/supertest": "^6.0.0",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -31,19 +29,16 @@
     "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.0.0",
     "supertest": "^6.3.0",
-    "testcontainers": "^10.0.0",
+    "tsx": "^4.0.0",
     "typescript": "^5.0.0",
     "vitest": "^1.0.0"
   },
   "dependencies": {
+    "@dapr/dapr": "^3.0.0",
     "@sekiban/core": "workspace:*",
-    "@sekiban/postgres": "workspace:*",
     "@sekiban/dapr": "workspace:*",
-    "@sekiban/config": "workspace:*",
-    "@sekiban/testing": "workspace:*",
     "express": "^4.18.0",
     "neverthrow": "^6.0.0",
-    "pg": "^8.11.0",
     "uuid": "^9.0.0",
     "zod": "^3.22.0"
   },
