--- a/ts/samples/dapr-sample/dapr-components/pubsub.yaml
+++ b/ts/samples/dapr-sample/dapr-components/pubsub.yaml
@@ -1,10 +1,10 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: pubsub
+  name: sekiban-pubsub
 spec:
   type: pubsub.in-memory
   version: v1
   metadata:
     - name: consumerID
-      value: "sekiban-dapr-sample"
+      value: "weather-forecast-api"
