refactor: remove user-related API routes and queries
- Deleted the GetUserQuery class and its associated file.
- Removed user API routes for creating, confirming, updating, and retrieving users.
- Eliminated user validation logic and related files.
- Cleaned up acceptance tests related to user registration and state transitions.
- Updated TypeScript configuration to reflect changes in project structure.
- Adjusted core and Dapr package exports to streamline functionality.

--- a/ts/samples/dapr-sample/dapr-components-local/statestore.yaml
+++ b/ts/samples/dapr-sample/dapr-components-local/statestore.yaml
@@ -3,12 +3,8 @@ kind: Component
 metadata:
   name: sekiban-eventstore
 spec:
-  type: state.redis
+  type: state.in-memory
   version: v1
   metadata:
-    - name: redisHost
-      value: "redis:6379"
-    - name: redisPassword
-      value: ""
     - name: actorStateStore
       value: "true"
