--- a/ts/samples/dapr-sample/dapr-components-local/pubsub.yaml
+++ b/ts/samples/dapr-sample/dapr-components-local/pubsub.yaml
@@ -3,12 +3,8 @@ kind: Component
 metadata:
   name: sekiban-pubsub
 spec:
-  type: pubsub.redis
+  type: pubsub.in-memory
   version: v1
   metadata:
-    - name: redisHost
-      value: "redis:6379"
-    - name: redisPassword
-      value: ""
     - name: consumerID
       value: "weather-forecast-api"
