--- a/ts/samples/dapr-sample/package.json
+++ b/ts/samples/dapr-sample/package.json
@@ -4,43 +4,23 @@
   "private": true,
   "type": "module",
   "description": "Weather Forecast Dapr sample demonstrating Sekiban multi-payload projectors with TypeScript",
-  "main": "dist/server.js",
   "scripts": {
-    "build": "tsc",
-    "dev": "tsx watch src/server.ts",
-    "start": "node dist/server.js",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "clean": "rm -rf dist",
-    "dapr:run": "dapr run --app-id weather-forecast-api --app-port 5000 --dapr-http-port 3500 --components-path ./dapr-components -- pnpm dev",
-    "dapr:stop": "dapr stop weather-forecast-api",
+    "build": "pnpm -r build",
+    "dev:api": "pnpm --filter @sekiban/dapr-sample-api dev",
+    "dev:web": "pnpm --filter @sekiban/dapr-sample-web dev",
+    "test": "pnpm -r test",
+    "clean": "pnpm -r clean",
+    "typecheck": "pnpm -r typecheck",
     "format": "prettier --write .",
-    "lint": "eslint . --ext .ts --fix",
-    "typecheck": "tsc --noEmit"
+    "lint": "eslint . --ext .ts,.tsx --fix"
   },
   "devDependencies": {
-    "@types/express": "^4.17.0",
-    "@types/node": "^20.0.0",
-    "@types/supertest": "^6.0.0",
-    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.0.0",
-    "supertest": "^6.3.0",
-    "tsx": "^4.0.0",
-    "typescript": "^5.0.0",
-    "vitest": "^1.0.0"
-  },
-  "dependencies": {
-    "@dapr/dapr": "^3.0.0",
-    "@sekiban/core": "workspace:*",
-    "@sekiban/dapr": "workspace:*",
-    "express": "^4.18.0",
-    "neverthrow": "^6.0.0",
-    "uuid": "^9.0.0",
-    "zod": "^3.22.0"
+    "typescript": "^5.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
