feat: Enhance InMemoryEventStore and SekibanExecutor with eventType handling
- Added eventType property to events in InMemoryEventStore.
- Updated filtering logic to use eventType directly.
- Refactored InMemorySekibanExecutor to utilize ITypedCommand and improve command handling.
- Commented out legacy command handling logic for future refactoring.
- Improved serialization and deserialization processes in EventSerializer.
- Updated AggregateActor to handle events and state more robustly.
- Enhanced Dapr integration in SekibanDaprExecutor for command execution.
- Cleaned up type exports and improved type safety across various modules.
- Removed unused imports and commented out code for clarity.

--- a/ts/src/packages/core/tsconfig.build.json
+++ b/ts/src/packages/core/tsconfig.build.json
@@ -9,6 +9,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noImplicitAny": false,
-    "strict": false
+    "strict": false,
+    "moduleResolution": "node"
   }
 }
