--- a/ts/src/packages/dapr/tsconfig.json
+++ b/ts/src/packages/dapr/tsconfig.json
@@ -15,12 +15,8 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "resolveJsonModule": true,
-    "moduleResolution": "node",
-    "composite": true
+    "moduleResolution": "node"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "tests"],
-  "references": [
-    { "path": "../core" }
-  ]
+  "exclude": ["node_modules", "dist", "tests"]
 }
