--- a/tests/Sekiban.Pure.Dapr.Tests/Sekiban.Pure.Dapr.Tests.csproj
+++ b/tests/Sekiban.Pure.Dapr.Tests/Sekiban.Pure.Dapr.Tests.csproj
@@ -21,6 +21,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
   </ItemGroup>
 
   <ItemGroup>
