refactor: remove weather forecast API tests and related helpers
- Deleted weather forecast query tests to streamline the codebase.
- Removed boot app, mock Dapr client, seed events, test config, and test database helpers.
- Cleaned up Vitest configuration and TypeScript settings.
- Removed unused web application files and README.
- Updated Dapr component configurations to simplify pub/sub and state store setups.
- Adjusted Docker Compose setup for PostgreSQL and Redis services.
- Refactored package.json and pnpm workspace settings for better organization.
- Added environment and ignore files for improved development experience.
- Created setup and run scripts for easier project initialization and testing.

--- a/ts/samples/dapr-sample/dapr-components-local/subscription.yaml
+++ b/ts/samples/dapr-sample/dapr-components-local/subscription.yaml
@@ -1,11 +1,11 @@
 apiVersion: dapr.io/v2alpha1
 kind: Subscription
 metadata:
-  name: domain-events-subscription
+  name: events-subscription
 spec:
-  topic: domain-events
+  topic: events
   routes:
-    default: /events/weather-forecasts
-  pubsubname: sekiban-pubsub
+    default: /events
+  pubsubname: pubsub
 scopes:
-- weather-forecast-api
+  - sekiban-api
