--- a/ts/samples/dapr-sample/dapr-components-local/pubsub.yaml
+++ b/ts/samples/dapr-sample/dapr-components-local/pubsub.yaml
@@ -1,10 +1,8 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: sekiban-pubsub
+  name: pubsub
 spec:
   type: pubsub.in-memory
   version: v1
-  metadata:
-    - name: consumerID
-      value: "weather-forecast-api"
+  metadata: []
