--- a/ts/samples/dapr-sample/dapr-components-local/statestore.yaml
+++ b/ts/samples/dapr-sample/dapr-components-local/statestore.yaml
@@ -1,10 +1,10 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: sekiban-eventstore
+  name: statestore
 spec:
   type: state.in-memory
   version: v1
   metadata:
-    - name: actorStateStore
-      value: "true"
+  - name: actorStateStore
+    value: "true"
