feat: Enhance Dapr demo script and update settings
- Updated `run-dapr-demo.sh` to use `npm run demo` instead of `npx tsx src/simple-server.ts`.
- Added new Bash commands to `.claude/settings.local.json` for improved script execution.
- Refactored `package.json` in core package to streamline build process.
- Introduced new types and interfaces in `interfaces.ts` for better command and event handling.
- Created `sekiban-error.ts` for backward compatibility with error handling.
- Implemented `EventStoreAdapter` to bridge between event storage and event handling.
- Added `EventsInMemoryStore` for in-memory event storage implementation.
- Updated `schema-registry` to improve command and event definitions.
- Enhanced `SchemaExecutor` for better command execution and aggregate loading.
- Adjusted TypeScript configuration to improve declaration generation and exclude unnecessary files.

--- a/ts/src/packages/core/package.json
+++ b/ts/src/packages/core/package.json
@@ -7,13 +7,13 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.js"
     }
   },
   "scripts": {
-    "build": "tsup && tsc --emitDeclarationOnly",
+    "build": "tsup",
     "dev": "tsup --watch",
     "test": "vitest",
     "test:watch": "vitest --watch",
