--- a/ts/src/packages/core/tsconfig.json
+++ b/ts/src/packages/core/tsconfig.json
@@ -3,12 +3,14 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
+    "emitDeclarationOnly": true,
     "declarationDir": "./dist",
+    "noEmit": false,
     "composite": true,
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts", "src/schema-registry/examples/**/*"]
 }
