Add Sekiban PubSub MinimalAPI Relay and Documentation
- Implemented SekibanEventRelayExtensions for relaying PubSub events to MultiProjectorActors.
- Added MapSekibanEventRelay, MapSekibanEventRelayMultiTopic, and configuration options for relay endpoints.
- Created detailed usage documentation in PubSubMinimalApiUsage.md and README_MinimalAPI_PubSub.md.
- Introduced scaling considerations and best practices for avoiding duplicate processing in ScalingConsiderations.md.
- Added example appsettings.json for configuration.
- Included logging configuration for better debugging and monitoring.

--- a/internalUsages/DaprSample/DaprSample.Api/appsettings.Development.json
+++ b/internalUsages/DaprSample/DaprSample.Api/appsettings.Development.json
@@ -1,10 +1,43 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Information",
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
       "Microsoft.Orleans": "Information",
-      "Dapr": "Debug"
+      "Dapr": "Information",
+      "Sekiban": "Debug",
+      "Sekiban.Pure.Dapr.Extensions.SekibanEventRelayHandler": "Debug"
     }
+  },
+  "AllowedHosts": "*",
+  "Sekiban": {
+    "Database": "postgres",
+    "PubSub": {
+      "Enabled": true,
+      "ComponentName": "sekiban-pubsub",
+      "TopicName": "events.all",
+      "ConsumerGroup": "dapr-sample-projectors-dev",
+      "MaxConcurrency": 3,
+      "EnableDeadLetterQueue": false,
+      "DeadLetterTopic": "events.dead-letter",
+      "MaxRetryCount": 1
+    },
+    "Actor": {
+      "IdPrefix": "local-dev"
+    },
+    "StateStore": {
+      "ComponentName": "sekiban-eventstore"
+    }
+  },
+  "ConnectionStrings": {
+    "redis": "localhost:6379",
+    "postgres": "Host=localhost;Port=5432;Database=SekibanEventStore;Username=postgres;Password=password;"
+  },
+  "LocalDevelopment": {
+    "RelaxedMode": true,
+    "ContinueOnProjectorFailure": true,
+    "EnableDetailedLogging": true,
+    "SkipDaprHealthCheck": false
   }
 }
