--- a/ts/samples/dapr-sample/.env.example
+++ b/ts/samples/dapr-sample/.env.example
@@ -1,24 +1,24 @@
-# Environment
+# Node environment
 NODE_ENV=development
-
-# Server
 PORT=3000
 
-# Database
+# PostgreSQL configuration
 DATABASE_URL=postgresql://sekiban:sekiban_password@localhost:5432/sekiban_events
 
-# Dapr
+# Dapr configuration
 DAPR_HTTP_PORT=3500
 DAPR_GRPC_PORT=50001
 DAPR_APP_ID=sekiban-api
 DAPR_STATE_STORE_NAME=statestore
 DAPR_PUBSUB_NAME=pubsub
 DAPR_EVENT_TOPIC=events
+
+# Actor configuration
 DAPR_ACTOR_TYPE=AggregateActor
 
-# API
+# API configuration
 API_PREFIX=/api
 CORS_ORIGIN=*
 
 # Logging
-LOG_LEVEL=info
+LOG_LEVEL=debug
