--- a/ts/samples/dapr-sample/packages/api/package.json
+++ b/ts/samples/dapr-sample/packages/api/package.json
@@ -34,6 +34,7 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.0",
+    "@types/pg": "^8.15.4",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vitest": "^1.0.0"
